# Projet_2_1_MLFactory

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  TEST_SCRIPTS.ps1  docker-compose.yml  manage.ps1  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
data/: iris_test.csv
docs/: .nojekyll  CONTRIBUTING_DOCS.md  Makefile  README.md  build.ps1  build.sh  conf.py  index.rst
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/api/: frontend.doctree  serving.doctree  training.doctree
docs/_build/doctrees/dev-guide/: architecture.doctree  deployment.doctree  training.doctree
docs/_build/doctrees/user-guide/: installation.doctree  quickstart.doctree  troubleshooting.doctree  validation.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/api/: main.html
docs/_build/html/_modules/train/: train.html
docs/_build/html/_sources/api/: frontend.rst.txt  training.rst.txt
docs/_build/html/_sources/dev-guide/: architecture.rst.txt
docs/_build/html/_sources/user-guide/: installation.rst.txt  troubleshooting.rst.txt  validation.rst.txt
docs/_build/html/api/: frontend.html  serving.html  training.html
docs/_build/html/dev-guide/: architecture.html  deployment.html  training.html
docs/_build/html/user-guide/: installation.html  quickstart.html  troubleshooting.html  validation.html
docs/api/: serving.rst
docs/dev-guide/: deployment.rst  training.rst
docs/user-guide/: quickstart.rst  troubleshooting.rst
documentation/: EVALUATION_GUIDE.md  Projet_2_1_MLFactory.md
notebooks/: README.md  requirements.txt  train_model.ipynb
src/api/: Dockerfile  __init__.py  main.py  requirements.txt
src/front/: .dockerignore  Dockerfile  __init__.py  app.py  requirements.txt
src/train/: __init__.py  train.py
tests/: TEST_SCRIPTS.ps1  manage.ps1
